--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "broccoli-funnel": "^2.0.1",
-    "broccoli-merge-trees": "^3.0.1",
+    "broccoli-funnel": "^2.0.2",
+    "broccoli-merge-trees": "^3.0.2",
     "broccoli-stew": "^2.0.0",
+    "ember-auto-import": "^1.3.0",
     "ember-cli-babel": "^6.16.0",
     "ember-get-config": "^0.2.4",
-    "hammer-timejs": "^1.1.0"
+    "fastboot-transform": "^0.1.3",
+    "hammer-timejs": "^1.1.0",
+    "resolve": "^1.10.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
